--- a/src/web/index.html
+++ b/src/web/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <title>Pifuxelck</title>
   </head>
   <body>
