--- a/src/web/index.html
+++ b/src/web/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <title>Pifuxelck</title>
   </head>
   <body>
-    <div id="content"></div>
+    <div style="display:flex;justify-content:center;align-items:center; width: 100%; height: 100%; top: 0px; left: 0px; position: absolute;" id="content"></div>
     <script src="./bundle.js"></script>
   </body>
 </html>
