--- a/src/web/index.html
+++ b/src/web/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <title>Pifuxelck</title>
   </head>
-  <body>
+  <body style="background: #CFD8DC">
     <div style="display:flex;justify-content:center;align-items:center; width: 100%; height: 100%; top: 0px; left: 0px; position: absolute;" id="content"></div>
     <script src="./bundle.js"></script>
   </body>
