--- a/src/web/index.html
+++ b/src/web/index.html
@@ -8,6 +8,6 @@
   </head>
   <body style="background: #CFD8DC">
     <div style="display:flex;justify-content:center;align-items:center; width: 100%; height: 100%; top: 0px; left: 0px; position: absolute;" id="content"></div>
-    <script src="./bundle.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
