Add iOS web app tags
This is copied from TnakChat which apparently renders as an app on iOS,
so hopefully this will be sufficient.

Fixes #18

--- a/static/index.html
+++ b/static/index.html
@@ -2,12 +2,21 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="theme-color" content="#3f51b5"/>
-    <link rel="manifest" href="/manifest.json">
+
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+    <!-- Apple web app settings. -->
+    <link rel="apple-touch-icon" href="/tnak.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#3f51b5">
+
+    <!-- Android web app settings. -->
+    <meta name="theme-color" content="#3f51b5"/>
+    <link rel="manifest" href="/manifest.json">
+
     <title>Pifuxelck</title>
   </head>
   <body style="background: #CFD8DC">
