Add a stats page
The stats page is implemented as a separate react app that is bundled
with the main app's JS binary. The stats end-point of the server returns
an HTML file with an in-lined payload that calls out the web app's stats
entry point.

--- a/static/index.html
+++ b/static/index.html
@@ -22,5 +22,6 @@
   <body style="background: #CFD8DC">
     <div style="display:flex;justify-content:center;align-items:center; width: 100%; height: 100%; top: 0px; left: 0px; position: absolute;" id="content"></div>
     <script src="/bundle.js"></script>
+    <script>startApp();</script>
   </body>
 </html>
