Probably fix iOS icon
The old snippet was copied from TnakChat and referenced an image that
did not exist...

Fixes #35

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <!-- Apple web app settings. -->
-    <link rel="apple-touch-icon" href="/tnak.png">
+    <link rel="apple-touch-icon" href="/images/icon-192.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="#3f51b5">
 
